--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=b0245ed48349baf3e626",
+    "/css/app.css": "/css/app.css?id=cf61a1f078771f31b04a"
 }
