--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=b0245ed48349baf3e626",
-    "/css/app.css": "/css/app.css?id=64ac5b19fc12a2aac42f"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
